--- a/index.html
+++ b/index.html
@@ -2,349 +2,80 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>SupplySense – AI Supplier Verification</title>
+  <title>SupplySense AI – Supplier Trust Engine</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="styles.css" />
-  <script defer src="script.js"></script>
 </head>
-<body data-page="home">
-<header class="site-header">
-  <div class="container header-inner">
-    <a href="index.html" class="logo">
-      <span class="logo-mark"></span>
-      <span class="logo-text">SupplySense</span>
-    </a>
-    <nav class="main-nav">
-      <a href="index.html#features">Features</a>
-      <a href="index.html#pricing">Pricing</a>
-      <a href="index.html#testimonials">Testimonials</a>
-    </nav>
-    <div class="header-actions">
-      <a href="dashboard.html" class="btn btn-ghost">Login</a>
-      <a href="index.html#pricing" class="btn btn-primary">Sign Up Free</a>
+<body class="app-body">
+  <!-- Top Navigation -->
+  <header class="top-nav">
+    <div class="nav-left">
+      <a href="index.html" class="logo-mark">SupplySense<span>AI</span></a>
+      <span class="nav-divider"></span>
+      <span class="nav-label">Supplier Trust Engine</span>
     </div>
-  </div>
-</header>
-
-<main>
-  <!-- Hero -->
-  <section class="hero">
-    <div class="container hero-inner">
-      <div class="hero-copy">
-        <div class="pill">⚡ AI-Powered Supplier Verification</div>
-        <h1>Verify Suppliers. <span class="text-accent">Avoid Risks.</span> Grow Faster.</h1>
-        <p class="hero-subtitle">
-          Stop losing money on unreliable suppliers. Get instant AI-powered trust scores for any
-          AliExpress, Alibaba, or 1688 supplier before you order.
-        </p>
-        <div class="hero-actions">
-          <a href="scanner.html" class="btn btn-primary">Start Scanning Free</a>
-          <a href="dashboard.html" class="btn btn-soft">View Demo</a>
-        </div>
-        <div class="hero-metrics">
-          <div>
-            <h3>10K+</h3>
-            <p>Verified Suppliers</p>
-          </div>
-          <div>
-            <h3>50K+</h3>
-            <p>Scans Completed</p>
-          </div>
-          <div>
-            <h3>98%</h3>
-            <p>Accuracy Rate</p>
-          </div>
-        </div>
-      </div>
-      <div class="hero-art">
-        <div class="hero-card">
-          <div class="hero-card-header">
-            <span>Trust Score</span>
-            <span class="badge badge-soft">Supplier Analysis</span>
-          </div>
-          <div class="hero-score-ring">
-            <div class="score-ring">
-              <span>1024</span>
-              <small>Medium</small>
-            </div>
-            <div class="hero-score-meta">
-              <p><span class="dot"></span>On-time delivery 92%</p>
-              <p><span class="dot"></span>Quality control pass 88%</p>
-              <p><span class="dot"></span>Response time 1.3h</p>
-            </div>
-          </div>
-          <div class="hero-chart-placeholder">
-            <span class="chart-line"></span>
-            <span class="chart-line chart-line-2"></span>
-          </div>
-        </div>
-      </div>
+    <div class="nav-right">
+      <a href="dashboard.html" class="nav-link">Dashboard</a>
+      <a href="scanner.html" class="nav-link">Scanner</a>
+      <a href="marketplace.html" class="nav-link">Marketplace</a>
+      <a href="ai-tools.html" class="nav-link">AI Tools</a>
     </div>
-  </section>
+  </header>
 
-  <!-- Try It Now -->
-  <section class="section" id="features">
-    <div class="container">
-      <h2 class="section-title">Try It Now</h2>
-      <p class="section-subtitle">
-        Paste any supplier URL to get instant trust score analysis and comprehensive insights.
+  <main class="app-main landing-main">
+    <section class="landing-hero">
+      <h1>Stop gambling on random suppliers.</h1>
+      <p>
+        SupplySense AI is your Supplier Trust Engine. Scan any product link, get a 0–100
+        Trust Score, filter suppliers by real performance, and protect your brand from
+        slow shipping, poor quality, and fake reviews.
       </p>
-      <div class="scanner-inline">
-        <div class="input-group">
-          <span class="input-icon">🔍</span>
-          <input type="text" placeholder="Paste supplier URL (AliExpress, Alibaba, 1688, CJ Dropshipping…)" />
-        </div>
-        <button class="btn btn-primary">Scan Supplier</button>
+      <ul class="landing-bullets">
+        <li>✅ Analyze suppliers from AliExpress, CJ Dropshipping, 1688, Alibaba and more</li>
+        <li>✅ Trust Score with shipping, quality, communication & stability sub-scores</li>
+        <li>✅ Product search with filters for shipping time, price, and rating</li>
+        <li>✅ AI tools for product research, margin calculation and negotiation</li>
+      </ul>
+      <a href="#auth-card" class="primary-btn">Start free</a>
+    </section>
+
+    <section class="card landing-auth-card" id="auth-card">
+      <div class="auth-tabs">
+        <button class="auth-tab auth-tab-active" data-auth-tab="login">Log in</button>
+        <button class="auth-tab" data-auth-tab="signup">Sign up</button>
       </div>
-      <p class="scanner-supported">
-        Supports: AliExpress, Alibaba, 1688.com, Taobao, CJ Dropshipping
-      </p>
-    </div>
-  </section>
 
-  <!-- Feature grid -->
-  <section class="section section-gray">
-    <div class="container">
-      <h2 class="section-title">Everything You Need to Verify Suppliers</h2>
-      <p class="section-subtitle">
-        Comprehensive analysis tools to protect your business and maximize profits.
-      </p>
+      <!-- Login Form -->
+      <form id="login-form" class="auth-form auth-form-active">
+        <h2>Welcome back</h2>
+        <p class="card-subtext">Log in to access your dashboard, scans and tools.</p>
+        <label for="login-email">Email</label>
+        <input type="email" id="login-email" placeholder="you@store.com" required />
 
-      <div class="feature-grid">
-        <div class="card feature-card">
-          <div class="feature-icon shield"></div>
-          <h3>Trust Score Analysis</h3>
-          <p>
-            AI-powered reliability scoring based on 12+ metrics including shipment data, reviews,
-            and dispute rates.
-          </p>
-        </div>
-        <div class="card feature-card">
-          <div class="feature-icon search"></div>
-          <h3>Multi-Platform Scanner</h3>
-          <p>
-            Analyze suppliers from AliExpress, Alibaba, 1688, Taobao, and CJ Dropshipping with one click.
-          </p>
-        </div>
-        <div class="card feature-card">
-          <div class="feature-icon trend"></div>
-          <h3>Price Tracking</h3>
-          <p>Monitor price stability and get alerts when suppliers change pricing or stock levels.</p>
-        </div>
-        <div class="card feature-card">
-          <div class="feature-icon lightning"></div>
-          <h3>Real-Time Insights</h3>
-          <p>
-            Instant analysis of shipping times, return risks, and warehouse locations with AI
-            recommendations.
-          </p>
-        </div>
-        <div class="card feature-card">
-          <div class="feature-icon compare"></div>
-          <h3>Supplier Comparison</h3>
-          <p>Compare multiple suppliers side-by-side to find the best match for your needs.</p>
-        </div>
-        <div class="card feature-card">
-          <div class="feature-icon badge"></div>
-          <h3>Verified Marketplace</h3>
-          <p>Browse a curated marketplace of pre-verified suppliers across major categories.</p>
-        </div>
-      </div>
-    </div>
-  </section>
+        <label for="login-password">Password</label>
+        <input type="password" id="login-password" placeholder="••••••••" required />
 
-  <!-- Compare suppliers -->
-  <section class="section">
-    <div class="container">
-      <h2 class="section-title">Compare Multiple Suppliers</h2>
-      <p class="section-subtitle">
-        Make data-driven decisions with side-by-side supplier comparisons. See exactly which
-        supplier offers the best mix of reliability, pricing, and shipping.
-      </p>
-      <div class="card comparison-card">
-        <div class="comparison-toolbar">
-          <div class="chip chip-soft">Smart Recommendations</div>
-          <div class="chip chip-soft">Alternative Suppliers</div>
-          <div class="chip chip-soft">Risk Alerts</div>
-        </div>
-        <div class="comparison-table-placeholder">
-          <div class="comparison-row">
-            <span class="badge badge-soft">Supplier A</span>
-            <div class="comparison-bar">
-              <span style="width:75%"></span>
-            </div>
-            <span class="comparison-score">94</span>
-          </div>
-          <div class="comparison-row">
-            <span class="badge badge-soft">Supplier B</span>
-            <div class="comparison-bar">
-              <span style="width:62%"></span>
-            </div>
-            <span class="comparison-score">81</span>
-          </div>
-          <div class="comparison-row">
-            <span class="badge badge-soft">Supplier C</span>
-            <div class="comparison-bar">
-              <span style="width:48%"></span>
-            </div>
-            <span class="comparison-score">73</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+        <button type="submit" class="primary-btn full-width">Log in</button>
+      </form>
 
-  <!-- Testimonials -->
-  <section class="section section-gray" id="testimonials">
-    <div class="container">
-      <h2 class="section-title">Trusted by Thousands of Dropshippers</h2>
-      <p class="section-subtitle">See what our users are saying about SupplySense.</p>
-      <div class="testimonial-grid">
-        <div class="card testimonial-card">
-          <div class="stars">★★★★★</div>
-          <p>
-            “SupplySense saved me from a bad supplier that would have cost me thousands. The trust
-            score was spot-on!”
-          </p>
-          <div class="testimonial-meta">
-            <strong>Sarah Chen</strong>
-            <span>Shopify Store Owner</span>
-          </div>
-        </div>
-        <div class="card testimonial-card">
-          <div class="stars">★★★★★</div>
-          <p>
-            “We’ve cut our supplier vetting time by 80%. The AI analysis is incredibly accurate and
-            comprehensive.”
-          </p>
-          <div class="testimonial-meta">
-            <strong>Michael Rodriguez</strong>
-            <span>Dropshipping Agency</span>
-          </div>
-        </div>
-        <div class="card testimonial-card">
-          <div class="stars">★★★★★</div>
-          <p>
-            “The price tracking and comparison features are game-changers. I always know I’m getting
-            the best deal.”
-          </p>
-          <div class="testimonial-meta">
-            <strong>Amara Williams</strong>
-            <span>E-commerce Entrepreneur</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+      <!-- Signup Form -->
+      <form id="signup-form" class="auth-form">
+        <h2>Create your account</h2>
+        <p class="card-subtext">One login for scans, marketplace and AI tools.</p>
+        <label for="signup-name">Store / agency name</label>
+        <input type="text" id="signup-name" placeholder="My Shopify Store" required />
 
-  <!-- Pricing -->
-  <section class="section" id="pricing">
-    <div class="container">
-      <h2 class="section-title">Simple, Transparent Pricing</h2>
-      <p class="section-subtitle">Choose the plan that’s right for your business.</p>
+        <label for="signup-email">Email</label>
+        <input type="email" id="signup-email" placeholder="you@store.com" required />
 
-      <div class="pricing-grid">
-        <div class="card pricing-card">
-          <div class="pricing-label">Free</div>
-          <p class="pricing-subtitle">Perfect for trying out SupplySense</p>
-          <div class="pricing-price">
-            <span class="pricing-amount">$0</span><span class="pricing-period">/month</span>
-          </div>
-          <ul class="pricing-features">
-            <li>10 supplier scans per month</li>
-            <li>Basic trust score analysis</li>
-            <li>Product URL scanner</li>
-            <li>Community support</li>
-            <li>Email notifications</li>
-          </ul>
-          <button class="btn btn-soft block">Get Started</button>
-        </div>
+        <label for="signup-password">Password</label>
+        <input type="password" id="signup-password" placeholder="Create a password" required />
 
-        <div class="card pricing-card pricing-card-primary">
-          <div class="pricing-most-popular">Most Popular</div>
-          <div class="pricing-label">Pro</div>
-          <p class="pricing-subtitle">For serious dropshippers</p>
-          <div class="pricing-price">
-            <span class="pricing-amount">$49</span><span class="pricing-period">/month</span>
-          </div>
-          <ul class="pricing-features">
-            <li>Unlimited supplier scans</li>
-            <li>Advanced AI analysis</li>
-            <li>Supplier comparison tools</li>
-            <li>Priority support</li>
-            <li>Chrome extension access</li>
-            <li>Price calculator &amp; predictions</li>
-            <li>Weekly market insights</li>
-          </ul>
-          <button class="btn btn-primary block">Get Started</button>
-        </div>
+        <button type="submit" class="primary-btn full-width">Sign up</button>
+      </form>
+    </section>
+  </main>
 
-        <div class="card pricing-card">
-          <div class="pricing-label">Enterprise</div>
-          <p class="pricing-subtitle">For agencies and teams</p>
-          <div class="pricing-price">
-            <span class="pricing-amount">Custom</span>
-          </div>
-          <ul class="pricing-features">
-            <li>Everything in Pro</li>
-            <li>Multi-user accounts</li>
-            <li>API access</li>
-            <li>Custom integrations</li>
-            <li>Dedicated account manager</li>
-            <li>White-label options</li>
-            <li>Custom reporting</li>
-          </ul>
-          <button class="btn btn-soft block">Contact Sales</button>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- CTA -->
-  <section class="section section-cta">
-    <div class="container cta-inner">
-      <h2>Ready to Verify Your Suppliers?</h2>
-      <p>Join thousands of successful dropshippers who trust SupplySense.</p>
-      <a href="scanner.html" class="btn btn-light">Start Free Trial</a>
-    </div>
-  </section>
-</main>
-
-<footer class="site-footer">
-  <div class="container footer-inner">
-    <div class="footer-col">
-      <div class="footer-logo">
-        <span class="logo-mark"></span>
-        <span class="logo-text">SupplySense</span>
-      </div>
-      <p class="footer-text">
-        AI-powered supplier verification for dropshippers and e-commerce businesses.
-      </p>
-    </div>
-    <div class="footer-col">
-      <h4>Product</h4>
-      <a href="#features">Features</a>
-      <a href="#pricing">Pricing</a>
-      <a href="dashboard.html">Chrome Extension</a>
-      <a href="dashboard.html">Shopify App</a>
-    </div>
-    <div class="footer-col">
-      <h4>Company</h4>
-      <a href="#">About</a>
-      <a href="#">Blog</a>
-      <a href="#">Careers</a>
-      <a href="#">Contact</a>
-    </div>
-    <div class="footer-col">
-      <h4>Legal</h4>
-      <a href="#">Privacy Policy</a>
-      <a href="#">Terms of Service</a>
-      <a href="#">Cookie Policy</a>
-    </div>
-  </div>
-  <div class="container footer-bottom">
-    <span>© 2025 SupplySense. All rights reserved.</span>
-  </div>
-</footer>
+  <script src="script.js"></script>
 </body>
-</html>
+          </html>
