--- a/dashboard.html
+++ b/dashboard.html
@@ -2,170 +2,79 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>SupplySense – Dashboard</title>
+  <title>SupplySense AI – Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="styles.css" />
-  <script defer src="script.js"></script>
 </head>
-<body data-page="dashboard" class="app-body">
-<div class="app-shell">
-  <aside class="sidebar">
-    <div class="sidebar-logo">
-      <span class="logo-mark"></span>
-      <span class="logo-text">SupplySense</span>
-      <span class="sidebar-tag">Platform</span>
+<body class="app-body">
+  <!-- Top Navigation -->
+  <header class="top-nav">
+    <div class="nav-left">
+      <a href="index.html" class="logo-mark">SupplySense<span>AI</span></a>
+      <span class="nav-divider"></span>
+      <span class="nav-label">Dashboard</span>
     </div>
-    <nav class="sidebar-nav">
-      <a href="dashboard.html" class="sidebar-link active">Dashboard</a>
-      <a href="scanner.html" class="sidebar-link">Scanner</a>
-      <a href="marketplace.html" class="sidebar-link">Marketplace</a>
-      <a href="ai-tools.html" class="sidebar-link">AI Tools</a>
+    <div class="nav-right">
+      <a href="dashboard.html" class="nav-link nav-link-active">Dashboard</a>
+      <a href="scanner.html" class="nav-link">Scanner</a>
+      <a href="marketplace.html" class="nav-link">Marketplace</a>
+      <a href="ai-tools.html" class="nav-link">AI Tools</a>
+    </div>
+  </header>
+
+  <!-- Side Nav -->
+  <aside class="side-nav">
+    <button class="side-nav-toggle" id="side-nav-toggle">☰</button>
+    <nav class="side-nav-menu" id="side-nav-menu">
+      <a href="dashboard.html" class="side-nav-item side-nav-item-active">Overview</a>
+      <a href="scanner.html" class="side-nav-item">Scan Links</a>
+      <a href="marketplace.html" class="side-nav-item">Product Search</a>
+      <a href="ai-tools.html" class="side-nav-item">AI Tools Suite</a>
+      <a href="#" class="side-nav-item">Account &amp; Billing</a>
     </nav>
-    <div class="sidebar-footer">
-      <div class="user-pill">
-        <div class="avatar">JD</div>
-        <div>
-          <div class="user-name">John Doe</div>
-          <div class="user-plan">Pro Plan</div>
-        </div>
-      </div>
-      <a href="index.html" class="sidebar-exit">← Back to Site</a>
-    </div>
   </aside>
 
-  <main class="app-main">
-    <header class="app-header">
-      <div>
-        <h1>Dashboard</h1>
-        <p class="muted">Welcome back! Here’s your supplier verification overview.</p>
-      </div>
-      <button class="icon-button" title="Refresh">
-        ⟳
-      </button>
-    </header>
-
-    <section class="app-section">
-      <div class="stats-grid">
-        <div class="card stat-card">
-          <div class="stat-label">Suppliers Scanned</div>
-          <div class="stat-main">
-            <span class="stat-value">127</span>
-            <span class="stat-tag stat-tag-up">+12% from last month</span>
-          </div>
-        </div>
-        <div class="card stat-card">
-          <div class="stat-label">Products Verified</div>
-          <div class="stat-main">
-            <span class="stat-value">456</span>
-            <span class="stat-tag stat-tag-up">+8% from last month</span>
-          </div>
-        </div>
-        <div class="card stat-card">
-          <div class="stat-label">Avg Trust Score</div>
-          <div class="stat-main">
-            <span class="stat-value">82</span>
-            <span class="stat-tag">Across all suppliers</span>
-          </div>
-        </div>
-        <div class="card stat-card">
-          <div class="stat-label">Saved Suppliers</div>
-          <div class="stat-main">
-            <span class="stat-value">24</span>
-            <span class="stat-tag">Verified &amp; saved</span>
-          </div>
-        </div>
-      </div>
+  <main class="app-main dashboard-main">
+    <section class="page-hero">
+      <h1 id="dashboard-greeting">Welcome to your Supplier Health Dashboard</h1>
+      <p>
+        See a snapshot of your supplier risk, recent scans, and jump into product search
+        or AI tools in one click.
+      </p>
     </section>
 
-    <section class="app-section two-column">
+    <section class="dashboard-grid">
       <div class="card">
-        <div class="card-header">
-          <h2>Recent Scans</h2>
-          <a href="#" class="link-muted">View All Scans</a>
-        </div>
-        <div class="list">
-          <div class="list-item">
-            <div>
-              <div class="list-title">
-                TechSource Global Ltd
-                <span class="chip chip-success">verified</span>
-              </div>
-              <div class="list-subtitle">aliexpress.com/store/… · 2 hours ago</div>
-            </div>
-            <div class="list-meta">
-              <span class="badge-soft">89</span>
-              <button class="btn btn-soft btn-xs">View</button>
-            </div>
-          </div>
-          <div class="list-item">
-            <div>
-              <div class="list-title">
-                FastShip Electronics
-                <span class="chip chip-warning">caution</span>
-              </div>
-              <div class="list-subtitle">1688.com/supplier/… · 5 hours ago</div>
-            </div>
-            <div class="list-meta">
-              <span class="badge-soft">72</span>
-              <button class="btn btn-soft btn-xs">View</button>
-            </div>
-          </div>
-          <div class="list-item">
-            <div>
-              <div class="list-title">
-                Quality Home Goods
-                <span class="chip chip-danger">risky</span>
-              </div>
-              <div class="list-subtitle">alibaba.com/supplier/… · 1 day ago</div>
-            </div>
-            <div class="list-meta">
-              <span class="badge-soft">45</span>
-              <button class="btn btn-soft btn-xs">View</button>
-            </div>
-          </div>
-        </div>
+        <h2>Account snapshot</h2>
+        <p class="card-subtext">Quick view of your account and current plan.</p>
+        <ul class="dashboard-list">
+          <li><span>Plan:</span> <strong>Free (demo)</strong></li>
+          <li><span>Connected stores:</span> <strong>0</strong> (Shopify app coming later)</li>
+          <li><span>Suppliers scanned (local):</span> <strong id="snapshot-scan-count">0</strong></li>
+          <li><span>High-risk suppliers:</span> <strong id="snapshot-high-risk-count">0</strong></li>
+        </ul>
       </div>
 
       <div class="card">
-        <div class="card-header">
-          <h2>Average Score</h2>
-          <span class="chip chip-success">Excellent</span>
+        <h2>Recent scans</h2>
+        <p class="card-subtext">Last few suppliers scanned from this browser.</p>
+        <div id="recent-scans-empty" class="empty-state">
+          No scans stored locally yet. Run a scan from the Scanner page.
         </div>
-        <div class="score-ring-large">
-          <div class="score-ring">
-            <span>82</span>
-            <small>/100</small>
-          </div>
-        </div>
-        <div class="score-footer">
-          <div>
-            <div class="muted">This Month</div>
-            <div class="score-footer-value">82 <span class="stat-tag-up">↑</span></div>
-          </div>
-          <div>
-            <div class="muted">Last Month</div>
-            <div class="score-footer-value">78</div>
-          </div>
-        </div>
+        <ul id="recent-scans-list" class="recent-scans-list"></ul>
       </div>
-    </section>
 
-    <section class="app-section">
       <div class="card">
-        <div class="card-header">
-          <h2>Alerts</h2>
-        </div>
-        <div class="alert alert-danger">
-          <strong>Price Change Detected</strong>
-          <p>FastShip Electronics increased prices by 15%.</p>
-        </div>
-        <div class="alert alert-warning">
-          <strong>Stock Alert</strong>
-          <p>2 saved products are low on inventory.</p>
+        <h2>Quick actions</h2>
+        <div class="quick-actions">
+          <a href="scanner.html" class="secondary-btn full-width">Scan a new supplier link</a>
+          <a href="marketplace.html" class="secondary-btn full-width">Search products & suppliers</a>
+          <a href="ai-tools.html" class="secondary-btn full-width">Open AI tools</a>
         </div>
       </div>
     </section>
   </main>
-</div>
+
+  <script src="script.js"></script>
 </body>
 </html>
