Revise AI Tools page layout and content
Updated the title and improved the navigation structure for better user experience. Added new sections for AI tools with descriptions.

--- a/ai-tools.html
+++ b/ai-tools.html
@@ -2,161 +2,82 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>SupplySense – AI Tools</title>
+  <title>SupplySense AI – Tools Suite</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="styles.css" />
-  <script defer src="script.js"></script>
 </head>
-<body data-page="ai-tools" class="app-body">
-<div class="app-shell">
-  <aside class="sidebar">
-    <div class="sidebar-logo">
-      <span class="logo-mark"></span>
-      <span class="logo-text">SupplySense</span>
-      <span class="sidebar-tag">Platform</span>
+<body class="app-body">
+  <!-- Top Navigation -->
+  <header class="top-nav">
+    <div class="nav-left">
+      <a href="index.html" class="logo-mark">SupplySense<span>AI</span></a>
+      <span class="nav-divider"></span>
+      <span class="nav-label">AI Tools Suite</span>
     </div>
-    <nav class="sidebar-nav">
-      <a href="dashboard.html" class="sidebar-link">Dashboard</a>
-      <a href="scanner.html" class="sidebar-link">Scanner</a>
-      <a href="marketplace.html" class="sidebar-link">Marketplace</a>
-      <a href="ai-tools.html" class="sidebar-link active">AI Tools</a>
+    <div class="nav-right">
+      <a href="dashboard.html" class="nav-link">Dashboard</a>
+      <a href="scanner.html" class="nav-link">Scanner</a>
+      <a href="marketplace.html" class="nav-link">Marketplace</a>
+      <a href="ai-tools.html" class="nav-link nav-link-active">AI Tools</a>
+    </div>
+  </header>
+
+  <!-- Side Nav -->
+  <aside class="side-nav">
+    <button class="side-nav-toggle" id="side-nav-toggle">☰</button>
+    <nav class="side-nav-menu" id="side-nav-menu">
+      <a href="dashboard.html" class="side-nav-item">Overview</a>
+      <a href="scanner.html" class="side-nav-item">Scan Links</a>
+      <a href="marketplace.html" class="side-nav-item">Product Search</a>
+      <a href="ai-tools.html" class="side-nav-item side-nav-item-active">AI Tools Suite</a>
+      <a href="#" class="side-nav-item">Account &amp; Billing</a>
     </nav>
-    <div class="sidebar-footer">
-      <div class="user-pill">
-        <div class="avatar">JD</div>
-        <div>
-          <div class="user-name">John Doe</div>
-          <div class="user-plan">Pro Plan</div>
-        </div>
-      </div>
-      <a href="index.html" class="sidebar-exit">← Back to Site</a>
-    </div>
   </aside>
 
   <main class="app-main">
-    <header class="app-header">
-      <div>
-        <h1>AI Tools <span class="chip chip-soft">Premium</span></h1>
-        <p class="muted">
-          Powerful AI-driven tools to optimize your dropshipping business and maximize profits.
+    <section class="page-hero">
+      <h1>AI tools built for dropshippers and ecom operators</h1>
+      <p>
+        Use AI to find products, predict shipping times, calculate profit margins, and
+        craft better supplier negotiations.
+      </p>
+    </section>
+
+    <section class="ai-tools-grid">
+      <div class="card">
+        <h2>AI Product Finder</h2>
+        <p class="card-subtext">
+          Describe your niche and profit goals. We’ll suggest product ideas and supplier profiles.
         </p>
-      </div>
-    </header>
-
-    <section class="app-section">
-      <div class="card ai-upsell">
-        <div>
-          <h2>Unlock All Premium Tools</h2>
-          <p>
-            Upgrade to Pro to access all AI tools and take your dropshipping business to the next
-            level. Get unlimited scans, advanced analysis, and priority support.
-          </p>
-          <ul class="ai-list">
-            <li>Unlimited AI tool usage</li>
-            <li>Priority processing</li>
-            <li>Advanced insights</li>
-          </ul>
-        </div>
-        <button class="btn btn-primary btn-lg">Upgrade to Pro</button>
+        <p class="coming-soon-tag">Coming soon</p>
       </div>
 
-      <div class="ai-tools-grid">
-        <div class="card ai-tool-card">
-          <div class="ai-tool-header">
-            <span class="chip chip-soft">Premium</span>
-          </div>
-          <h3>AI Product Finder</h3>
-          <p>
-            Discover trending products and winning suppliers using advanced AI market analysis. Get
-            insights on demand, competition, and profit potential.
-          </p>
-          <button class="btn btn-primary btn-sm">Use Tool</button>
-        </div>
+      <div class="card">
+        <h2>AI Supplier Negotiator</h2>
+        <p class="card-subtext">
+          Generate negotiation messages to request better pricing, MOQs, or custom packaging.
+        </p>
+        <p class="coming-soon-tag">Coming soon</p>
+      </div>
 
-        <div class="card ai-tool-card">
-          <div class="ai-tool-header">
-            <span class="chip chip-soft">Premium</span>
-          </div>
-          <h3>Price Calculator</h3>
-          <p>
-            Calculate profit margins, shipping costs, and optimal pricing strategies. Factor in all
-            costs to maximize profits.
-          </p>
-          <button class="btn btn-primary btn-sm">Use Tool</button>
-        </div>
+      <div class="card">
+        <h2>Profit Margin Calculator</h2>
+        <p class="card-subtext">
+          Enter product cost, shipping and fees to get recommended retail price and margin.
+        </p>
+        <p class="coming-soon-tag">Coming soon</p>
+      </div>
 
-        <div class="card ai-tool-card">
-          <div class="ai-tool-header">
-            <span class="chip chip-soft">Premium</span>
-          </div>
-          <h3>Shipping Time Predictor</h3>
-          <p>
-            Predict accurate shipping times based on historical data and current trends. Set customer
-            expectations correctly.
-          </p>
-          <button class="btn btn-soft btn-sm locked">Upgrade to Access</button>
-        </div>
-
-        <div class="card ai-tool-card">
-          <div class="ai-tool-header">
-            <span class="chip chip-soft">Premium</span>
-          </div>
-          <h3>Supplier Negotiator</h3>
-          <p>
-            Get AI-powered negotiation scripts and strategies to get better deals from suppliers.
-          </p>
-          <button class="btn btn-soft btn-sm locked">Upgrade to Access</button>
-        </div>
-
-        <div class="card ai-tool-card">
-          <div class="ai-tool-header">
-            <span class="chip chip-soft">Premium</span>
-          </div>
-          <h3>Competitor Analyzer</h3>
-          <p>
-            Analyze competitor products and find gaps in the market. Discover opportunities before
-            your competition.
-          </p>
-          <button class="btn btn-soft btn-sm locked">Upgrade to Access</button>
-        </div>
-
-        <div class="card ai-tool-card">
-          <div class="ai-tool-header">
-            <span class="chip chip-soft">Premium</span>
-          </div>
-          <h3>Smart Insights</h3>
-          <p>
-            Get AI-generated recommendations for your supplier strategy. Optimize your entire supply
-            chain.
-          </p>
-          <button class="btn btn-primary btn-sm">Use Tool</button>
-        </div>
-
-        <div class="card ai-tool-card">
-          <div class="ai-tool-header">
-            <span class="chip chip-soft">Premium</span>
-          </div>
-          <h3>Trend Forecaster</h3>
-          <p>
-            Predict upcoming product trends and seasonal demand. Stay ahead of shifts and capitalize
-            on opportunities.
-          </p>
-          <button class="btn btn-soft btn-sm locked">Upgrade to Access</button>
-        </div>
-
-        <div class="card ai-tool-card">
-          <div class="ai-tool-header">
-            <span class="chip chip-soft">Premium</span>
-          </div>
-          <h3>Quality Predictor</h3>
-          <p>
-            AI-powered quality assessment based on supplier history, reviews, and product specs.
-          </p>
-          <button class="btn btn-primary btn-sm">Use Tool</button>
-        </div>
+      <div class="card">
+        <h2>Shipping Time Predictor</h2>
+        <p class="card-subtext">
+          Predict realistic shipping times by region based on historical trends.
+        </p>
+        <p class="coming-soon-tag">Coming soon</p>
       </div>
     </section>
   </main>
-</div>
+
+  <script src="script.js"></script>
 </body>
 </html>
